实现bitmao to String 和String to bitmap

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':httpconnection', ':dialogshowinfo', ':library', ':progressbar', ':beautifului', ':json'
+include ':app', ':httpconnection', ':dialogshowinfo', ':library', ':progressbar', ':beautifului', ':jsonAndBitmaptoString'
