--- a/skill/src/main/AndroidManifest.xml
+++ b/skill/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".TabLayoutActivity" />
+        <activity android:name=".ButtonNavigationActivity" />
+        <activity android:name="com.zhengyuan.skill.ButtomNavigationBar.MyButtomNavigationBar" />
+        <activity android:name=".PopipWindow" />
+
     </application>
 
 </manifest>
