--- a/skill/src/main/AndroidManifest.xml
+++ b/skill/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zhengyuan.skill">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,6 +26,7 @@
         <activity android:name=".ButtonNavigationActivity" />
         <activity android:name="com.zhengyuan.skill.ButtomNavigationBar.MyButtomNavigationBar" />
         <activity android:name=".PopipWindow" />
+        <activity android:name=".TakePhotoAndSave" />
 
     </application>
 
